--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,15 @@ body {
     font-family: opensans-bold,Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
+.textPadrao {
+    font-size: 22px;
+}
+
+.divBody {
+    width: 100%;
+    border-bottom: 1px solid #e6e6e6;
+}
+
 .teste {
     width: 100%;
     border-bottom: 1px solid #e6e6e6;
@@ -157,6 +166,276 @@ body {
     100% {height: 13px;width:3px;background-color: #51e28d;}
 }
 
+.BodyResultEleicao {
+    height: 120px;
+    display: flex;
+}
+
+.resultPorEstado {
+    width: 78%;
+    display: flex;
+}
+
+.Seta {
+    width: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #e5e5e5;
+    border-left: 1px solid #e5e5e5;
+}
+
+.BuscarCidade, .BuscarCidade div {
+    width: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.buscarCandidadoPorCidade {
+    border: 1px solid #e5e5e5;
+    height: 60px;
+    width:20px;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+
+.imginput {
+    padding: 5px;
+}
+
+.inputbusca {
+    border: none;
+}
+
+.itemResult {
+    height: 120px;
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #e5e5e5;
+    border-left: 1px solid #e5e5e5;
+}
+
+.itemResultMenor {
+    border-top: 2px solid #34c771;
+    height: 80px;
+    width: 310px;
+}
+
+.itemResultCabecalho {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    font-size: 14px;
+}
+
+.itemResultFotoNomePorcent {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.itemResultCandidato {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.segundoTurno {
+    border: 1px solid #34c771;
+    border-radius: 50%;
+    font-size: 9px;
+    padding: 2px;
+    color: #34c771;
+}
+
+.imgperfil{
+    border: 1px solid #c8c8c8;
+    border-radius: 50%;
+    width: 38px;
+    
+}
+.divImgFotoPerfil {
+    padding-right: 5px;
+}
+
+.textoDoResult {
+    font-size: 13px;
+}
+
+.cidades {
+    font-weight: 600;
+}
+
+.eleito {
+    border: 1px solid #34c771;
+    background-color: #34c771;
+    border-radius: 30%;
+    font-size: 9px;
+    padding: 2px;
+    color: #ffffff;
+}
+
+.PropagandaDiv {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.propagandaTopo {
+    background-color: #efefef;
+    width:1240px;
+    height: 250px;
+}
+
+.ultimaNoticias {
+    display: flex;
+    margin-top: 30px;
+}
 
 
+.ultimaNoticiasEsquerda {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    border-right: 1px solid #c8c8c8;
+    padding-left: 23px;;
 
+}
+
+
+.g1Primeira {
+    width: 600px;
+    padding: 5px;
+    height: 190px;
+    font-size: 55px;
+    font-weight: bold;
+    color: #cd150c;
+    
+}
+
+.g1Segunda ul {
+    list-style-type: square;
+    color:#909090;
+    padding-left: 17px;
+}
+
+.g1SegundaListaSpan{
+    color: #cd150c;
+    font-weight: 600; 
+}
+
+.g1Segunda li{
+    padding-top: 7px;
+}
+
+.g1SegundaLista {
+    padding-bottom: 25px;
+}
+
+.g1Terceira{
+    widows: 600px;
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    justify-content: space-between;
+    border-top: 1px solid #c8c8c8;
+}
+
+.g1TerceiraArtigo {
+    width: 185px;
+}
+
+.g1TerceiraFoto {
+    height: 105px;
+    border-radius: 4px;
+    background-color: royalblue;
+}
+
+.g1TerceiraTexto {
+    font-size: 20px;
+    font-weight: 700;
+    color: #cd150c;
+}
+
+.g1TerceiraNota {
+    font-size: 14px;
+}
+
+.g1TerceiraNotaSpan {
+    color: #cd150c;
+    font-size: 15px;
+    font-weight: 100;
+}
+
+.ultimaNoticiasDireita {
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+}
+
+.ultimaNoticiasDireitaDiv {
+    display: flex;
+    flex-direction: column;
+}
+
+.g1QuartaParteArtigos {
+    width: 315px;
+    padding-bottom: 20px;
+}
+
+.g1QuartaParte {
+    width: 239px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ultimaNoticiasDireitaFoto{
+    padding-bottom: 14px;
+} 
+.ultimaNoticiasDireitaTexto{
+    padding-bottom: 15px;
+    font-size: 21px;
+    font-weight: 700;
+} 
+
+.ultimaNoticiasDireitaTextoDiv{
+    padding-top: 20px;
+}
+
+.ultimaNoticiasDireitaList ol{
+    font-size: 14px;
+    list-style-type: square;
+    padding-left: 20px;
+    color:#909090;
+}
+
+.ultimaNoticiasDireitaList li {
+    padding-bottom: 10px;
+}
+
+.ultimaNoticiasDireitaListLi {
+    line-height: 18px;
+}
+
+.g1 {
+    color: #cd150c;
+}
+
+.gshow {
+    color: #ff8100;
+}
+
+.ge {
+    color: #06aa48;
+}
+
+.gshowli {
+    color: #ff8100;
+}
